--- a/zadanie65_chec.css
+++ b/zadanie65_chec.css
@@ -28,7 +28,7 @@ div#drugi_chechla{
 	width:1000pt;
 	margin-left: auto;
 	margin-right: auto;
-	background-color:green;
+	background-color:red;
 	border: solid 5px rgb(38, 87, 241) ;
 	border-top-right-radius: 14px;
 	border-top-left-radius:14px;
