--- a/zadanie65_chec.css
+++ b/zadanie65_chec.css
@@ -15,7 +15,7 @@ div#pierwszy_chechla{
 	width:800pt;
 	margin-left: auto;
 	margin-right: auto;
-	background-color:red;
+	background-color:yellow;
 	border: solid 3px rgb(0,0,0) ;
 	border-top-right-radius: 13px;
 	border-top-left-radius:13px;
